[package]
name = "someip-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
either = "1.15.0"
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.27"
nom = { version = "8.0.0", features = ["alloc"] }
pcap = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
smol = "2.0.2"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"]}
